--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -1,12 +1,4 @@
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
-}
+
 
 @Article{Ratcliff2013,
 author ="Ratcliff, Laura E. and Haynes, Peter D.",
@@ -18,12 +10,8 @@ issue  ="31",
 pages  ="13024-13031",
 publisher  ="The Royal Society of Chemistry",
 doi  ="10.1039/C3CP52043A",
-url  ="http://dx.doi.org/10.1039/C3CP52043A",
-abstract  ="A recently developed linear-scaling density-functional theory (LS-DFT) formalism is used to calculate optical absorption spectra of hybrids of C60 and the conjugated polymers poly(para-phenylene) 
-(PPP) and poly(para-phenylene vinylene) (PPV). The use of a LS formalism allows calculations on large systems with realistic proportions of C60{,} which has been of interest for the use of such materials in 
-photovoltaics. Two different bonding structures are tested for the hybrid PPP and for both systems additional peaks are present in the absorption spectra below the original onset of absorption. By identifying 
-the eigenstates involved in the relevant transitions{,} a weighted density difference is formed{,} demonstrating the transfer of charge between the polymer chain and the C60{,} in agreement with experiment. For 
-the hybrid PPV{,} no additional peaks are observed in the absorption spectrum."}
+url  ="http://dx.doi.org/10.1039/C3CP52043A"
+}
 
 @article {deltaTest2016,
 	author = {Lejaeghere, Kurt and Bihlmayer, Gustav and Bj{\"o}rkman, Torbj{\"o}rn and Blaha, Peter and Bl{\"u}gel, Stefan and Blum, Volker and Caliste, Damien and Castelli, Ivano E. and Clark, Stewart J. 
@@ -40,58 +28,36 @@ the hybrid PPV{,} no additional peaks are observed in the absorption spectrum."}
 	year = {2016},
 	doi = {10.1126/science.aad3000},
 	publisher = {American Association for the Advancement of Science},
-	abstract = {Density functional theory (DFT) is now routinely used for simulating material properties. Many software packages are available, which makes it challenging to know which are the best to use for a 
-	specific calculation. Lejaeghere et al. compared the calculated values for the equation of states for 71 elemental crystals from 15 different widely used DFT codes employing 40 different potentials (see the Perspective 
-	by Skylaris). Although there were variations in the calculated values, most recent codes and methods converged toward a single value, with errors comparable to those of experiment.Science, this 
-	issue p. 10.1126/science.aad3000; see also p. 1394INTRODUCTIONThe reproducibility of results is one of the underlying principles of science. An observation can only be accepted by the scientific community 
-	when it can be confirmed by independent studies. However, reproducibility does not come easily. Recent works have painfully exposed cases where previous conclusions were not upheld. The scrutiny of the 
-	scientific community has also turned to research involving computer programs, finding that reproducibility depends more strongly on implementation than commonly thought. These problems are especially 
-	relevant for property predictions of crystals and molecules, which hinge on precise computer implementations of the governing equation of quantum physics.RATIONALEThis work focuses on density functional 
-	theory (DFT), a particularly popular quantum method for both academic and industrial applications. More than 15,000 DFT papers are published each year, and DFT is now increasingly used in an automated 
-	fashion to build large databases or apply multiscale techniques with limited human supervision. Therefore, the reproducibility of DFT results underlies the scientific credibility of a substantial 
-	fraction of current work in the natural and engineering sciences. A plethora of DFT computer codes are available, many of them differing considerably in their details of implementation, and each yielding 
-	a certain {\textquotedblleft}precision{\textquotedblright} relative to other codes. How is one to decide for more than a few simple cases which code predicts the correct result, and which does not? We devised 
-	a procedure to assess the precision of DFT methods and used this to demonstrate reproducibility among many of the most widely used DFT codes. The essential part of this assessment is a pairwise comparison of a 
-	wide range of methods with respect to their predictions of the equations of state of the elemental crystals. This effort required the combined expertise of a large group of code developers and expert users.
-	RESULTSWe calculated equation-of-state data for four classes of DFT implementations, totaling 40 methods. Most codes agree very well, with pairwise differences that are comparable to those between different 
-	high-precision experiments. Even in the case of pseudization approaches, which largely depend on the atomic potentials used, a similar precision can be obtained as when using the full potential. The remaining 
-	deviations are due to subtle effects, such as specific numerical implementations or the treatment of relativistic terms.CONCLUSIONOur work demonstrates that the precision of DFT implementations can be determined, 
-	even in the absence of one absolute reference code. Although this was not the case 5 to 10 years ago, most of the commonly used codes and methods are now found to predict essentially identical results. The 
-	established precision of DFT codes not only ensures the reproducibility of DFT predictions but also puts several past and future developments on a firmer footing. Any newly developed methodology can now be tested 
-	against the benchmark to verify whether it reaches the same level of precision. New DFT applications can be shown to have used a sufficiently precise method. Moreover, high-precision DFT calculations are essential 
-	for developing improvements to DFT methodology, such as new density functionals, which may further increase the predictive power of the simulations.Recent DFT methods yield 
-reproducible results.Whereas older DFT implementations predict different values (red darts), codes have now evolved to mutual agreement (green darts). The scoreboard illustrates the good pairwise agreement of four classes 
-of DFT implementations (horizontal direction) with all-electron results (vertical direction). Each number reflects the average difference between the equations of state for a given pair of methods, with the green-to-red 
-color scheme showing the range from the best to the poorest agreement.The widespread popularity of density functional theory has given rise to an extensive range of dedicated codes for predicting molecular and crystalline 
-properties. However, each code implements the formalism in a different way, raising questions about the reproducibility of such predictions. We report the results of a community-wide effort that compared 15 solid-state 
-codes, using 40 different potentials or basis set types, to assess the quality of the Perdew-Burke-Ernzerhof equations of state for 71 elemental crystals. We conclude that predictions from recent codes and pseudopotentials 
-agree very well, with pairwise differences that are comparable to those between different high-precision experiments. Older methods, however, have less precise agreement. Our benchmark provides a framework for users and 
-developers to document the precision of new applications and methodological improvements.},
 	issn = {0036-8075},
 	URL = {http://science.sciencemag.org/content/351/6280/aad3000},
 	eprint = {http://science.sciencemag.org/content/351/6280/aad3000.full.pdf},
 	journal = {Science}
 }
 
-@article{Boffi2016,
-author = {Nicholas M. Boffi and Manish Jain and Amir Natan},
-title = {Asymptotic behavior and interpretation of virtual states: The effects of confinement and of basis sets},
-journal = {The Journal of Chemical Physics},
-volume = {144},
-number = {8},
-pages = {084104},
-year = {2016},
-doi = {10.1063/1.4942187},
-
-URL = { 
-        http://dx.doi.org/10.1063/1.4942187
-    
-},
-eprint = { 
-        http://dx.doi.org/10.1063/1.4942187
-    
+@article{runge1984,
+  title = {Density-Functional Theory for Time-Dependent Systems},
+  author = {Runge, Erich and Gross, E. K. U.},
+  journal = {Phys. Rev. Lett.},
+  volume = {52},
+  issue = {12},
+  pages = {997--1000},
+  numpages = {0},
+  year = {1984},
+  month = {Mar},
+  publisher = {American Physical Society}
 }
 
+@article{onida2002,
+  title = {Electronic excitations: density-functional versus many-body Green's-function approaches},
+  author = {Onida, Giovanni and Reining, Lucia and Rubio, Angel},
+  journal = {Rev. Mod. Phys.},
+  volume = {74},
+  issue = {2},
+  pages = {601--659},
+  numpages = {0},
+  year = {2002},
+  month = {Jun},
+  publisher = {American Physical Society}
 }
 
 @article{N2Casida2014,
@@ -119,6 +85,37 @@ year = {2008},
 doi = {10.1063/1.2899649}
 }
 
+@article{hubener2014,
+  title = {Time-dependent density functional theory using atomic orbitals and the self-consistent Sternheimer equation},
+  author = {H\"ubener, Hannes and Giustino, Feliciano},
+  journal = {Phys. Rev. B},
+  volume = {89},
+  issue = {8},
+  pages = {085129},
+  numpages = {13},
+  year = {2014},
+  month = {Feb},
+  publisher = {American Physical Society}
+}
+
+@article{brabec2015,
+title = "Efficient Algorithms for Estimating the Absorption Spectrum within Linear Response TDDFT",
+author = "Jiri Brabec and Lin Lin and Meiyue Shao and Niranjan Govind and Chao Yang and Yousef Saad and G. Ng Esmond ",
+year = "2015",
+month = "11",
+day = "10",
+doi = "10.1021/acs.jctc.5b00887",
+language = "English (US)",
+volume = "11",
+pages = "5197--5208",
+journal = "Journal of Chemical Theory and Computation",
+issn = "1549-9618",
+publisher = "American Chemical Society",
+number = "11",
+}
+
+
+
 @article{mahan1980,
   title = {Modified Sternheimer equation for polarizability},
   author = {Mahan, G. D.},
@@ -134,3 +131,12 @@ doi = {10.1063/1.2899649}
   url = {https://link.aps.org/doi/10.1103/PhysRevA.22.1780}
 }
 
+@article{boffi2016,
+author = {Nicholas M. Boffi and Manish Jain and Amir Natan},
+title = {Asymptotic behavior and interpretation of virtual states: The effects of confinement and of basis sets},
+journal = {The Journal of Chemical Physics},
+volume = {144},
+number = {8},
+pages = {084104},
+year = {2016}
+}
